--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fast-marquee": "^1.6.5",
+    "react-icons": "^5.5.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
