--- a/package.json
+++ b/package.json
@@ -10,19 +10,28 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.0",
+    "@radix-ui/react-dialog": "^1.1.7",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.7.3",
     "jose": "^6.0.10",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.488.0",
     "mongoose": "^8.13.2",
+    "motion": "^12.7.3",
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
     "sonner": "^2.0.3",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.2.5",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
