--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start", 
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/genai": "^0.9.0",
     "@google/generative-ai": "^0.24.0",
     "@radix-ui/react-dialog": "^1.1.7",
     "axios": "^1.8.4",
