--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/genai": "^0.9.0",
     "@google/generative-ai": "^0.24.0",
     "@radix-ui/react-dialog": "^1.1.7",
+    "@vapi-ai/web": "^2.2.6",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
